--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                 background: rgb(0, 35, 102);
                 color: rgb(45, 45, 45);
                 padding: 10px;
-                font-family: arial;
+                font-family: "Comic Sans MS";
             }
             header {
                 font-size: 1.5em;
