--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             .sidebar img {
                 width: 200px;
                 border-radius: 5px;
+                border-color: green;
                 border-style: solid;
             }
             .content {
@@ -67,6 +68,10 @@
             }
             .interests header {
                 font-size: 1.25em;
+            }
+            #school-link  {
+                color: forestgreen;
+                text-decoration: none
             }
         </style>
     </head>
@@ -88,7 +93,7 @@
                 
                 <div class="content">
                     <header>Christian Bankovic</header>
-                    <p>Student at Ponchatoula High School</p>
+                    <p>Student at <a id="school-link" href="https://www.tangischools.org/phs">Ponchatoula High School</a></p>
                     <section class="interests">
                         <header>Interents</header>
                         <ul>
@@ -97,6 +102,7 @@
                             <li>Working math problems</li>
                             <li>Playing guitar</li>
                             <li>Singing</li>
+                            <li>Working with tech</li>
                         </ul>
                     </section>
                 </div>
