--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,13 @@
             }
             
             #portfolio li:hover {
-                background: #eee;
+                border-left-style: solid;
+                border-left-width: 10px;
+                /*border-left-color: #2196F3;*/
+                border-left-color: #2dbd17;
+                /*background: #dff;*/
+                /*background: #d0ffc9;*/
+                background: #deffd9;
             } 
             
             #portfolio a {
