--- a/index.html
+++ b/index.html
@@ -58,9 +58,12 @@
             }
             .sidebar img {
                 width: 200px;
+                margin-top: 10px;
+                margin-left: 10px;
                 border-radius: 5px;
                 border-color: green;
                 border-style: solid;
+                box-shadow: 0px 0px 15px black ;
             }
             .content {
                 flex: 1;
