Added copyright info.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 border-radius: 5px;
                 border-color: green;
                 border-style: solid;
-                box-shadow: 0px 0px 15px black ;
+                box-shadow: 0px 0px 15px;
             }
             .content {
                 flex: 1;
@@ -75,6 +75,9 @@
             #school-link  {
                 color: forestgreen;
                 text-decoration: none
+            }
+            footer {
+                color: white;
             }
         </style>
     </head>
@@ -98,7 +101,7 @@
                     <header>Christian Bankovic</header>
                     <p>Student at <a id="school-link" href="https://www.tangischools.org/phs">Ponchatoula High School</a></p>
                     <section class="interests">
-                        <header>Interents</header>
+                        <header>Interests</header>
                         <ul>
                             <li>Reading</li>
                             <li>Learning</li>
@@ -110,6 +113,10 @@
                     </section>
                 </div>
             </main>
+            
+            <footer>
+                <p>&copy Christian Bankovic 2020</p>
+            </footer>
         </div>
     </body>
 </html>
