--- a/portfolio.html
+++ b/portfolio.html
@@ -84,6 +84,9 @@
                 text-decoration: none;
                 color: #454545;
             }
+            footer {
+                color: white;
+            }
         </style>
     </head>
 
@@ -104,6 +107,10 @@
                     </ul>
                 </div>
             </main>
+            
+            <footer>
+                <p>&copy Christian Bankovic 2020</p>
+            </footer>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script id="portfolioScript">$(document).ready(function() {$.getJSON('projects/projects.json').then(function(data) { data.projects.forEach(function(project){ $('#portfolio').append('<li><a href="projects/' + project.name + '/">' + project.title + ' : ' + project.description + '</a></li>'); }); }); });</script>
