Changed a thing and added metadata.

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>ChrisChips's Amazing Website</title>
+        <meta name="author" content="Christian Bankovic">
+        <meta name="description" content="A place for all of my projects.">
         
         <style type="text/css">
             body {
