--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>ChrisChips's Amazing Website</title>
+        <meta name="author" content="Christian Bankovic">
+        <meta name="description" content="The main page for my website.">
         
         <style>
             body {
