Changed another thing.

--- a/icecream.html
+++ b/icecream.html
@@ -36,7 +36,7 @@
                         alert("...mint. Yuck.");
                         
                     } else if (flavor === "Peanut" || flavor === "peanut") {
-                        alert("I'm sorry, but we don't sell that. I'm allergic to it.")
+                        alert("I'm sorry, but we don't sell peanut ice cream. I'm allergic to it.")
                         
                     } else {
                         alert("Here is your " + flavor + " ice cream cone!");
