--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                 margin-top: 10px;
                 margin-left: 10px;
                 border-radius: 5px;
-                border-color: green;
+                /*border-color: green;*/
+                border-color: black;
                 border-style: solid;
                 box-shadow: 0px 0px 15px;
             }
