Changed the button again.

--- a/icecream.html
+++ b/icecream.html
@@ -151,7 +151,7 @@
                 <div class="content">
                     <header>Ice Cream!</header>
                     <p>Welcome to ChrisChip's Ice Cream Parlor! You can only get some ice cream if you know the password, though.</a></p>
-                    <button type="button"><b>Ask For Ice Cream!</b></button> <!-- onclick="iceCream()"-->
+                    <button type="button">Ask For Ice Cream!</button> <!-- onclick="iceCream()"-->
                     
                     <section class="secrets">
                         <header>Psst!</header>
