--- a/projects/icecream.html
+++ b/projects/icecream.html
@@ -128,7 +128,7 @@
             }
             #tinyFont {
                 text-align: right;
-                font-size: 4;
+                text-align-last: 
             }
             footer {
                 color: white;
