Added easter eggs.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
+<!--      EASTER EGG!!!      
+             ______
+            /      \
+           / (_)    \
+          /      (_) \
+         /            \
+        /   (_)   (_)  \
+       |)               |
+       |      (_)     (_|
+       | (_)            |
+       |        (_)     |
+        \(_)        (_)/
+         \____________/
+
+
+    Hey, good job finding this!
+            ~(:D)
+
+           Fun Fact:
+        HTML stands for
+       Hypertext Markup
+           Language
+-->
+
 <!DOCTYPE HTML>
 <html>
     <head>
