--- a/projects/icecream/icecream.html
+++ b/projects/icecream/icecream.html
@@ -1,3 +1,30 @@
+<!--      EASTER EGG!!!      
+             ______
+            /      \
+           / (_)    \
+          /      (_) \
+         /            \
+        /   (_)   (_)  \
+       |)               |
+       |      (_)     (_|
+       | (_)            |
+       |        (_)     |
+        \(_)        (_)/
+         \____________/
+
+
+    Hey, good job finding this!
+            ~(:D)
+
+           Fun Fact:
+    Technically, HTML and
+    CSS aren't programming
+     languages. One is a
+     markup language, and
+   the other is a stylesheet
+           language.
+-->
+
 <!DOCTYPE HTML>
 <html>
     <head>
