--- a/projects/platformer/index.html
+++ b/projects/platformer/index.html
@@ -1,3 +1,23 @@
+<!--      EASTER EGG!!!      
+             ______
+            /      \
+           / (_)    \
+          /      (_) \
+         /            \
+        /   (_)   (_)  \
+       |)               |
+       |      (_)     (_|
+       | (_)            |
+       |        (_)     |
+        \(_)        (_)/
+         \____________/
+
+
+    Hey, good job finding this!
+            ~(:D)
+            
+-->
+
 <!DOCTYPE html>
 <html>
     <head>
