--- a/portfolio.html
+++ b/portfolio.html
@@ -1,3 +1,27 @@
+<!--      EASTER EGG!!!      
+             ______
+            /      \
+           / (_)    \
+          /      (_) \
+         /            \
+        /   (_)   (_)  \
+       |)               |
+       |      (_)     (_|
+       | (_)            |
+       |        (_)     |
+        \(_)        (_)/
+         \____________/
+
+
+    Hey, good job finding this!
+            ~(:D)
+
+           Fun Fact:
+        CSS stands for
+       Cascading Style
+            Sheets
+-->
+
 <!DOCTYPE HTML>
 <html>
     <head>
