Added a stoplight page in the projects.

--- a/projects/icecream/index.html
+++ b/projects/icecream/index.html
@@ -117,10 +117,6 @@
                 display: inline-block;
                 padding: 0 10px;
             }
-            nav a {
-                text-decoration: none;
-                color: #fff;
-            }
             
             /* Main Container Area Beneath Menu */
             main {
@@ -132,6 +128,7 @@
                 background-color: #14c5ff;
                 padding: 7px;
                 margin-bottom: 10px;
+                margin-top: 10px;
                 border-radius: 5px;
                 border-style: none;
                 box-shadow: 0px 4px #00759c; 
@@ -168,8 +165,7 @@
             <nav>
                 <header>ChrisChips's Amazing Website</header>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li></li>
                 </ul>
             </nav>
             
