Changed some things.

--- a/projects/icecream/index.html
+++ b/projects/icecream/index.html
@@ -38,7 +38,7 @@
                 var flavor1;
                 var flavor2;
                 
-                var wantIceCream = confirm("Hello! Welcome to Chrischip's Ice Cream Parlor!\nIf you want some ice cream, you have to say the password.");
+                var wantIceCream = confirm("Hello! Welcome to ChrisChip's Ice Cream Parlor!\nIf you want some ice cream, you'll have to say the password.");
                     if (wantIceCream === true) {
                     var response = prompt("Password:");
                     if (response === "GreenPurpleDice15") {
@@ -127,8 +127,8 @@
             button {
                 background-color: #14c5ff;
                 padding: 7px;
-                margin-bottom: 10px;
-                margin-top: 10px;
+                margin-bottom: 15px;
+                margin-top: 0px;
                 border-radius: 5px;
                 border-style: none;
                 box-shadow: 0px 4px #00759c; 
