--- a/projects/stoplight/index.html
+++ b/projects/stoplight/index.html
@@ -159,9 +159,9 @@
                     <section>
                         <div class="stoplight">
                             <div class="center">
-                                <button onclick="stopLightRed()" id="red"></button>
-                                <button onclick="stopLightYellow()" id="yellow"></button>
-                                <button onclick="stopLightGreen()" id="green"></button>
+                                <button onclick="stopLightRed" id="red"></button>
+                                <button onclick="stopLightYellow" id="yellow"></button>
+                                <button onclick="stopLightGreen" id="green"></button>
                             </div>
                         </div>
                     </section>
