--- a/projects/icecream/index.html
+++ b/projects/icecream/index.html
@@ -28,7 +28,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>ChrisChips's Amazing Website</title>
+        <title>IceCream</title>
         <meta name="author" content="Christian Bankovic">
         <meta name="description" content="Ice cream!">
         
