--- a/projects/stoplight/index.html
+++ b/projects/stoplight/index.html
@@ -21,7 +21,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>ChrisChips's Amazing Website</title>
+        <title>StopLight</title>
         <meta name="author" content="Christian Bankovic">
         <meta name="description" content="Stoplights!">
         
