--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -14,7 +14,7 @@
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 0px;  /* <--- Change me! */
+			left: 0;  /* <--- Change me! */
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
@@ -26,7 +26,7 @@
 
 	<script>
 		(function(){
-			'use strict'
+			'use strict';
 			/* global jQuery */
 
 			//////////////////////////////////////////////////////////////////
@@ -58,8 +58,9 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
-
+			var positionX = 0;
+			var points = 0;
+			var speed = 0;
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -67,9 +68,12 @@
 			turn it around! 
 			*/
 			function update() {
-				
-
-			};
+				positionX += speed;
+				moveBoxTo(positionX);
+				if (positionX < 0 || positionX > boardWidth) {
+					speed *= -1;
+				}
+			}
 
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
@@ -77,10 +81,12 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
+				positionX = 0;
+				points ++;
+				changeBoxText(points);
+				speed += 3;
 
-
-			};
+			}
 		})();
 	</script>
 </body>
