--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -77,7 +77,7 @@
 			This Function generated a randomm number between 0 and 255.
 			*/
 			function randRGBVal() {
-				var randomRGBVal = Math.random() * 255;
+				var randomRGBVal = Math.floor(Math.random() * 255);
 				return randomRGBVal;
 			}
 			
