--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -44,7 +44,7 @@
 			//////////////////////////////////////////////////////////////////
 			
 			var box = jQuery('.box');	// reference to the HTML .box element
-			// var board = jQuery('.board');	// reference to the HTML .board element
+			var board = jQuery('.board');	// reference to the HTML .board element
 			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
 
 			// Every 50 milliseconds, call the update Function (see below)
