Still have to get the game to end.

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -54,7 +54,7 @@
 			box.on('click', handleBoxClick);
 			
 			// Every time the board is clicked, call the handleBoardClick Function (see below)
-			board.on('click', handleBoardClick);
+			// board.on('click', handleBoardClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
 			function moveBoxTo(newPositionX, newPositionY) {
