Changed and interest

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <li>Reading</li>
                             <li>Learning</li>
                             <li>Working math problems</li>
-                            <li>Playing guitar</li>
+                            <li>Playing guitar and piano</li>
                             <li>Singing</li>
                             <li>Working with tech</li>
                         </ul>
