--- a/projects/bouncing-box-refactor/index.html
+++ b/projects/bouncing-box-refactor/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Bouncing Box</title>
-    <link rel="stylesheet" src="index.css">
+    <link rel="stylesheet" href="index.css">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="index.js"></script>
 
