--- a/pong/index.html
+++ b/pong/index.html
@@ -12,7 +12,9 @@
   
   <body>
     <div id='board'>
-      <div id='gameItem'></div>
+      <div class='gameItem' id='paddleLeft'></div>
+      <div class='gameItem' id='ball'></div>
+      <div class='gameItem' id='paddleRight'></div>
     </div>
   </body>
 </html>
