--- a/pong/index.html
+++ b/pong/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>Pong</title>
     <!-- Load CSS files -->
     <link rel="stylesheet" type="text/css" href="index.css">
-    
+
     <!-- Load JavaScript files -->
     <script src="jquery.min.js"></script>
     <script src="index.js"></script>
