added another title

--- a/projects/bouncing-box-refactor/index.html
+++ b/projects/bouncing-box-refactor/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bouncing Box</title>
+	<title>Bouncing Box Refactor</title>
     <link rel="stylesheet" href="index.css">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="index.js"></script>
