Added a pause and cheat mode!

--- a/pong/index.html
+++ b/pong/index.html
@@ -15,6 +15,7 @@
       <div class='gameItem' id='paddleLeft'></div>
       <div class='gameItem' id='ball'></div>
       <div class='gameItem' id='paddleRight'></div>
+      <div class='gameItem' id='cheatIcon'></div>
     </div>
   </body>
 </html>
