--- a/snake/index.html
+++ b/snake/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pong</title>
+    <title>Title</title>
     <!-- Load CSS files -->
     <link rel="stylesheet" type="text/css" href="index.css">
-
+    
     <!-- Load JavaScript files -->
     <script src="jquery.min.js"></script>
     <script src="index.js"></script>
@@ -12,10 +12,7 @@
   
   <body>
     <div id='board'>
-      <div class='gameItem' id='paddleLeft'></div>
-      <div class='gameItem' id='paddleRight'></div>
-      <div class='gameItem' id='ball'></div>
-      <div class='gameItem' id='cheatIcon'></div>
+      <div id='gameItem'></div>
     </div>
   </body>
 </html>
