--- a/snake/index.html
+++ b/snake/index.html
@@ -12,7 +12,9 @@
   
   <body>
     <div id='board'>
-      <div id='gameItem'></div>
+      <div class='gameItem' id='head'></div>
+      <div class='gameItem' id='tail'></div>
+      <div class='gameItem' id='apple'></div>
     </div>
   </body>
 </html>
