--- a/snake/index.html
+++ b/snake/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 
+<!--
+    ------ Cheat Commands ------
+    Type these in the difficulty 
+    prompt to enable them.
+
+    "Slow" - Very Slow Speed
+    "noCollision" - Gets rid of collision
+-->
+
 <head>
 	<title>Snake</title>
 	<!-- Load CSS files -->
