--- a/snake/index.html
+++ b/snake/index.html
@@ -7,7 +7,7 @@
     prompt to enable them.
 
     "Slow" - Very Slow Speed
-    "noCollision" - Gets rid of collision
+    "noCollide" - Gets rid of collision
 -->
 
 <head>
