--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -15,11 +15,11 @@
 	<div id='board'>
 		<div class='gameItem' id='paddleLeft'>
 			<p class='text' id='p1'>0</p>
-            <p class='text' id='bounced'>0</p>
+            <p class='text' id='bouncedLeft'>0</p>
 		</div>
 		<div class='gameItem' id='paddleRight'>
 			<p class='text' id='p2'>0</p>
-            <p class='text' id='bounced'>0</p>
+            <p class='text' id='bouncedRight'>0</p>
 		</div>
 		<div class='gameItem' id='ball'></div>
 		<div class='gameItem' id='cheatIcon'></div>
