fixing pong speeds

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -24,6 +24,20 @@
         <div class='gameItem' id='ball'></div>
         <div class='gameItem' id='cheatIcon'></div>
     </div>
+    <div>
+        <ul id='speeds'>Speeds:
+            <li id='up'>Up:</li>
+            <li id='left'>Left:</li>
+            <li id='down'>Down:</li>
+            <li id='right'>Right:</li>
+        </ul>
+        <ul id='tempSpeeds'>Temp Speeds:
+            <li id='tempUp'>Up:</li>
+            <li id='tempLeft'>Left:</li>
+            <li id='tempDown'>Down:</li>
+            <li id='tempRight'>Right:</li>
+        </ul>
+    </div>
 </body>
 
 </html>
