--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -25,18 +25,18 @@
         <div class='gameItem' id='cheatIcon'></div>
     </div>
     <div>
-        <ul id='speeds'>Speeds:
-            <li id='up'>Up:</li>
-            <li id='left'>Left:</li>
-            <li id='down'>Down:</li>
-            <li id='right'>Right:</li>
-        </ul>
-        <ul id='tempSpeeds'>Temp Speeds:
-            <li id='tempUp'>Up:</li>
-            <li id='tempLeft'>Left:</li>
-            <li id='tempDown'>Down:</li>
-            <li id='tempRight'>Right:</li>
-        </ul>
+        <div class='speeds' id='speeds'><b></b>
+            <p class='speeds' id='up'><span></span></p>
+            <p class='speeds' id='left'><span></span></p>
+            <p class='speeds' id='down'><span></span></p>
+            <p class='speeds' id='right'><span></span></p>
+        </div>
+        <div class='speeds' id='tempSpeeds'><b></b>
+            <p class='speeds' id='tempUp'><span></span></p>
+            <p class='speeds' id='tempLeft'><span></span></p>
+            <p class='speeds' id='tempDown'><span></span></p>
+            <p class='speeds' id='tempRight'><span></span></p>
+        </div>
     </div>
 </body>
 
