fixed a bug in snake that had the head go behind the tail

--- a/projects/snake/index.html
+++ b/projects/snake/index.html
@@ -22,6 +22,9 @@
 
 <body>
 	<div id='board'>
+        <div id='entireTail'> 
+
+        </div>
 		<div class='gameItem' id='apple'></div>
 		<div class='gameItem' id='head'></div>
 	</div>
