added interests in the index file

--- a/index.html
+++ b/index.html
@@ -146,9 +146,12 @@
                         <li>Reading</li>
                         <li>Learning</li>
                         <li>Working math problems</li>
+                        <li>Programming</li>
                         <li>Playing guitar and piano</li>
                         <li>Singing</li>
                         <li>Working with tech</li>
+                        <li>Playing D&D</li>
+                        <li>Building and coding robots</li>
                     </ul>
                 </section>
             </div>
