--- a/projects/stoplight/index.html
+++ b/projects/stoplight/index.html
@@ -83,6 +83,10 @@
                 height: 750px;
                 position: relative;
                 border-radius: 10px;
+			    -webkit-user-select: none; /* Safari */
+			    -moz-user-select: none; /* Firefox */
+			    -ms-user-select: none; /* IE10+/Edge */
+			    user-select: none; /* Standard */
             }
             .center {
                 margin: 0;
