--- a/projects/music/index.html
+++ b/projects/music/index.html
@@ -11,7 +11,19 @@
 </head>
 
 <body>
-    
+    <img src="assets/QuarterNote.png" id="C">
+    <img src="assets/QuarterNote.png" id="Db">
+    <img src="assets/QuarterNote.png" id="D">
+    <img src="assets/QuarterNote.png" id="Eb">
+    <img src="assets/QuarterNote.png" id="E">
+    <img src="assets/QuarterNote.png" id="F">
+    <img src="assets/QuarterNote.png" id="Gb">
+    <img src="assets/QuarterNote.png" id="G">
+    <img src="assets/QuarterNote.png" id="Ab">
+    <img src="assets/QuarterNote.png" id="A">
+    <img src="assets/QuarterNote.png" id="Bb">
+    <img src="assets/QuarterNote.png" id="B">
+    <img src="assets/QuarterNote.png" id="C">
 </body>
 
 </html>
