--- a/projects/music/index.html
+++ b/projects/music/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <img src="assets/QuarterNote.png" id="C">
+    <img class="quarter-note" id="C">
     <img src="assets/QuarterNote.png" id="Db">
     <img src="assets/QuarterNote.png" id="D">
     <img src="assets/QuarterNote.png" id="Eb">
