--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <html>
 
 <head>
-    <title>ChrisChips's Amazing Website</title>
+    <title>ChrisChips's Amazing Website testing</title>
     <meta name="author" content="Christian Bankovic">
     <meta name="description" content="The main page for my website.">
 
