Updating outdated information

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
             <div class="content">
                 <header>Christian Bankovic</header>
-                <p>Student at <a id="school-link" href="https://www.tangischools.org/phs">Ponchatoula High School</a>
+                <p>Student at <a id="school-link" href="https://www.southeastern.edu/">Southeastern Louisiana University</a>
                 </p>
                 <section class="interests">
                     <header>Interests</header>
