--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -21,21 +21,35 @@
             <p class='text' id='p2'>0</p>
             <p class='text' id='bouncedRight'>0</p>
         </div>
-        <div class='gameItem' id='ball'></div>
+        <div id='ballPit'>
+            <div class='gameItem balls' id='ball0'></div>
+        </div>
         <div class='gameItem' id='cheatIcon'></div>
     </div>
     <div>
         <div class='speeds' id='speeds'><b></b>
-            <p class='speeds' id='up'><span></span></p>
-            <p class='speeds' id='left'><span></span></p>
-            <p class='speeds' id='down'><span></span></p>
-            <p class='speeds' id='right'><span></span></p>
+            <ul>
+                <li class='speeds' id='up'><span></span></li>
+                <li class='speeds' id='left'><span></span></li>
+                <li class='speeds' id='down'><span></span></li>
+                <li class='speeds' id='right'><span></span></li>
+            </ul>
         </div>
         <div class='speeds' id='tempSpeeds'><b></b>
-            <p class='speeds' id='tempUp'><span></span></p>
-            <p class='speeds' id='tempLeft'><span></span></p>
-            <p class='speeds' id='tempDown'><span></span></p>
-            <p class='speeds' id='tempRight'><span></span></p>
+            <ul>
+                <li class='speeds' id='tempUp'><span></span></li>
+                <li class='speeds' id='tempLeft'><span></span></li>
+                <li class='speeds' id='tempDown'><span></span></li>
+                <li class='speeds' id='tempRight'><span></span></li>
+            </ul>
+        </div>
+        <div class='speeds' id='0Speeds'><b></b>
+            <ul>
+                <li class='speeds' id='0Up'><span></span></li>
+                <li class='speeds' id='0Left'><span></span></li>
+                <li class='speeds' id='0Down'><span></span></li>
+                <li class='speeds' id='0Right'><span></span></li>
+            </ul>
         </div>
     </div>
 </body>
