renamed a bunch of things, and am working on a way to predict where the ball will end up even if the ball bounces off a wall

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -47,6 +47,7 @@
             <ul>
                 <li class='speeds' id='0Up'><span></span></li>
                 <li class='speeds' id='0Left'><span></span></li>
+                <li class='speeds' id='0Left2'><span></span></li>
                 <li class='speeds' id='0Down'><span></span></li>
                 <li class='speeds' id='0Right'><span></span></li>
             </ul>
