began moving all the scores around the screen, and also changed ALL THE SINGLE QUOTES IN THE HTML INTO DOUBLE QUOTES

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -12,44 +12,48 @@
 </head>
 
 <body>
-    <div id='board'>
-        <div class='gameItem' id='paddleLeft'>
-            <p class='text' id='p1'>0</p>
-            <p class='text' id='bouncedLeft'>0</p>
+    <div id="board">
+        <div class="gameItem" id="paddleLeft"></div>
+        <div class="gameItem" id="paddleRight"></div>
+        <div id="ballPit">
+            <div class="gameItem balls" id="ball0"></div>
         </div>
-        <div class='gameItem' id='paddleRight'>
-            <p class='text' id='p2'>0</p>
-            <p class='text' id='bouncedRight'>0</p>
+        <div class="gameItem" id="cheatIcon"></div>
+    </div>
+    <div class="scores">
+        <div id="player1">
+            <p class="text scores" id="p1">0</p>
+            <p class="text scores" id="bouncedLeft">0</p>
         </div>
-        <div id='ballPit'>
-            <div class='gameItem balls' id='ball0'></div>
+        <div id="player2">
+            <p class="text scores" id="p2">0</p>
+            <p class="text scores" id="bouncedRight">0</p>
         </div>
-        <div class='gameItem' id='cheatIcon'></div>
     </div>
     <div>
-        <div class='speeds' id='speeds'><b></b>
+        <div class="speeds" id="speeds"><b></b>
             <ul>
-                <li class='speeds' id='up'><span></span></li>
-                <li class='speeds' id='left'><span></span></li>
-                <li class='speeds' id='down'><span></span></li>
-                <li class='speeds' id='right'><span></span></li>
+                <li class="speeds" id="up"><span></span></li>
+                <li class="speeds" id="left"><span></span></li>
+                <li class="speeds" id="down"><span></span></li>
+                <li class="speeds" id="right"><span></span></li>
             </ul>
         </div>
-        <div class='speeds' id='tempSpeeds'><b></b>
+        <div class="speeds" id="tempSpeeds"><b></b>
             <ul>
-                <li class='speeds' id='tempUp'><span></span></li>
-                <li class='speeds' id='tempLeft'><span></span></li>
-                <li class='speeds' id='tempDown'><span></span></li>
-                <li class='speeds' id='tempRight'><span></span></li>
+                <li class="speeds" id="tempUp"><span></span></li>
+                <li class="speeds" id="tempLeft"><span></span></li>
+                <li class="speeds" id="tempDown"><span></span></li>
+                <li class="speeds" id="tempRight"><span></span></li>
             </ul>
         </div>
-        <div class='speeds' id='0Speeds'><b></b>
+        <div class="speeds" id="0Speeds"><b></b>
             <ul>
-                <li class='speeds' id='0Up'><span></span></li>
-                <li class='speeds' id='0Left'><span></span></li>
-                <li class='speeds' id='0Left2'><span></span></li>
-                <li class='speeds' id='0Down'><span></span></li>
-                <li class='speeds' id='0Right'><span></span></li>
+                <li class="speeds" id="0Up"><span></span></li>
+                <li class="speeds" id="0Left"><span></span></li>
+                <li class="speeds" id="0Left2"><span></span></li>
+                <li class="speeds" id="0Down"><span></span></li>
+                <li class="speeds" id="0Right"><span></span></li>
             </ul>
         </div>
     </div>
