gotta work on fixing up the score positions

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -21,13 +21,13 @@
         <div class="gameItem" id="cheatIcon"></div>
     </div>
     <div class="scores">
-        <div id="player1">
-            <p class="text scores" id="p1">0</p>
-            <p class="text scores" id="bouncedLeft">0</p>
+        <div class="scores" id="player1">
+            <p class="text" id="p1">0</p>
+            <p class="text" id="bouncedLeft">0</p>
         </div>
-        <div id="player2">
-            <p class="text scores" id="p2">0</p>
-            <p class="text scores" id="bouncedRight">0</p>
+        <div class="scores" id="player2">
+            <p class="text" id="p2">0</p>
+            <p class="text" id="bouncedRight">0</p>
         </div>
     </div>
     <div>
