--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -22,8 +22,20 @@
         </div>
         <div class="gameItem" id="cheatIcon"></div>
     </div>
-    <div class="scoreboard"> <!-- Work on making a progressive score with separate DIV things for each score. Those DIV things will uptick when someone gets a point -->
+    <div class="scoreboard">
         <div class="scores" id="p1">
+            <b>P1 Score: <span>0</span></b>
+        </div>
+        <div class="scores" id="bounces">
+            <b>Total Bounces: <span>0</span></b>
+        </div>
+        <div class="scores" id="p2">
+            <b>P2 Score: <span>0</span></b>
+        </div>
+         <!-- Work on making a progressive score with separate 
+            DIV things for each score. Those DIV things will 
+            uptick when someone gets a point. Use tables. -->
+        <div>
             <!-- <div id="p1UpTick1"></div>
             <div id="p1UpTick2"></div>
             <div id="p1UpTick3"></div>
@@ -34,12 +46,8 @@
             <div id="p1UpTick8"></div>
             <div id="p1UpTick9"></div>
             <div id="p1UpTick10"></div> -->
-            <b>P1 Score: <span>0</span></b>
         </div>
-        <div class="scores" id="bounces">
-            <b>Total Bounces: <span>0</span></b>
-        </div>
-        <div class="scores" id="p2">
+        <div>
             <!-- <div id="p2UpTick1"></div>
             <div id="p2UpTick2"></div>
             <div id="p2UpTick3"></div>
@@ -50,7 +58,6 @@
             <div id="p2UpTick8"></div>
             <div id="p2UpTick9"></div>
             <div id="p2UpTick10"></div> -->
-            <b>P2 Score: <span>0</span></b>
         </div>
     </div>
     <div>
