Did a LOT of things, wip on reorganizing telemetry and also fixing up various bugs with cheat modes

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -18,7 +18,7 @@
         <div class="gameItem" id="paddleLeft"></div>
         <div class="gameItem" id="paddleRight"></div>
         <div id="ballPit">
-            <div class="gameItem balls" id="ball0"></div>
+            <div class="gameItem balls" id="ball0"><span>0</span></div>
         </div>
         <div class="gameItem" id="cheatIcon"></div>
     </div>
@@ -28,9 +28,6 @@
             <td colspan="7" class="scores" id="bounces"><b>Total Bounces: <span>000</span></b></td>
             <td colspan="6" class="scores" id="p2"><b>P2 Score: <span>000</span></b></td>
         </tr>
-         <!-- Work on making a progressive score with separate 
-            DIV things for each score. Those DIV things will 
-            uptick when someone gets a point. Use tables. -->
         <tr>
             <div> <!-- P1 Score Row -->
                 <td class="tallyMark p1TallyMark" id="p1Tally1"></td>
