Worked on a TON of things, including 1.) organizing telemetry data, 2.) fixing up colors to make them prettier for the player, 3.) fixing collisions even further and making them affixed to a global pixel-per-frame value, 4.) updating the MultiBall menu to allow restarting MultiBall while MultiBall is still enabled, 5.) making the overall cheatmode selection menu more efficient, 6.) finding a way to show and hide the numbers for each ball, and 7.) renamed several variables and functions to make them more readable, as well as adding comments

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-<!-- python -m http.server 9010 -->
-
 <head>
     <title>Pong</title>
     <!-- Load CSS files -->
@@ -15,8 +13,8 @@
 
 <body>
     <div id="board">
-        <div class="gameItem" id="paddleLeft"></div>
-        <div class="gameItem" id="paddleRight"></div>
+        <div class="gameItem paddles" id="paddleLeft"></div>
+        <div class="gameItem paddles" id="paddleRight"></div>
         <div id="ballPit">
             <div class="gameItem balls" id="ball0"><span>0</span></div>
         </div>
